@@ -1,3 +1,9 @@
+2013-04-02  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* gui/conversation.cc (font_units): Rename from em_metrics.
+	Adjust callers.
+	(Answer::Answer): Use raised frame style.
+
 2013-03-31  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* lib/sockio-c.c (get_float): Remove unused local variable val.
